--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,5 @@
     <h1>{{pageTitle}} Of My Website</h1>
     <p><a href="/">Home</a></p>
     <p><a href="/about">About</a></p>
+    <p><a href="/info">Info</a></p>
 </header>
